<resources>
    <string name="app_name">FragmentBackStack</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="fragment_a_name">FragmentA</string>
    <string name="plus_a">+A</string>
    <string name="tilda_a">~A</string>
    <string name="minus_a">-A</string>
    <string name="plus_b">+B</string>
    <string name="tilda_b">~B</string>
    <string name="minus_b">-B</string>
    <string name="fragment_b_name">FragmentB</string>
    <string name="minus_c">-C</string>
    <string name="tilda_c">~C</string>
    <string name="plus_c">+C</string>
    <string name="fragment_c_name">FragmentC</string>
</resources>
